--- a/pluggable-widget/projects/groupBox/package.json
+++ b/pluggable-widget/projects/groupBox/package.json
@@ -10,7 +10,7 @@
   },
   "license": "all right reserve",
   "config": {
-    "projectPath": "./tests/testProject",
+    "projectPath": "../TestProject",
     "mendixHost": "http://localhost:8080",
     "developmentPort": 3000
   },
