--- a/pluggable-widget/projects/groupBox/package.json
+++ b/pluggable-widget/projects/groupBox/package.json
@@ -16,6 +16,7 @@
   },
   "packagePath": "wengao",
   "scripts": {
+    "vite": "vite",
     "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
     "build": "pluggable-widgets-tools build:web",
@@ -25,8 +26,10 @@
     "release": "pluggable-widgets-tools release:web"
   },
   "devDependencies": {
+    "@engalar/vite-plugin-mendix": "^1.2.1",
     "@mendix/pluggable-widgets-tools": "^10.7.1",
-    "@types/big.js": "^6.0.2"
+    "@types/big.js": "^6.0.2",
+    "vite": "^5.2.11"
   },
   "dependencies": {
     "classnames": "^2.2.6"
