--- a/pluggable-widget/projects/groupBox/package.json
+++ b/pluggable-widget/projects/groupBox/package.json
@@ -17,6 +17,7 @@
   "packagePath": "wengao",
   "scripts": {
     "vite": "vite",
+    "vite:build": "vite build --config vite.config.sp.ts",
     "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
     "build": "pluggable-widgets-tools build:web",
@@ -29,7 +30,9 @@
     "@engalar/vite-plugin-mendix": "^1.2.1",
     "@mendix/pluggable-widgets-tools": "^10.7.1",
     "@types/big.js": "^6.0.2",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-commonjs": "^26.0.1"
   },
   "dependencies": {
     "classnames": "^2.2.6"
