--- a/pluggable-widget/projects/groupBox/package.json
+++ b/pluggable-widget/projects/groupBox/package.json
@@ -16,8 +16,8 @@
   },
   "packagePath": "wengao",
   "scripts": {
-    "vite": "vite",
-    "vite:build": "vite build --config vite.config.sp.ts",
+    "vite:start": "vite --config node_modules/@engalar/vite-plugin-mendix/config/vite.config.js",
+    "vite:build": "set __DEV_VITEJS__=true && npm run build",
     "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
     "build": "pluggable-widgets-tools build:web",
